# The_Final_Task

./: .env.example  .gitignore  .isort.cfg  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
data/: sample_russian.txt
docs/: usage.md
multilingual-summarizer/: .gitignore  config.example.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
multilingual-summarizer/.github/workflows/: manual-test.yml
multilingual-summarizer/data/: sample_english.txt  sample_german.txt
multilingual-summarizer/docs/: api.md
multilingual-summarizer/scripts/: download_models.py  run_ci_locally.sh
multilingual-summarizer/src/: cli.py  main.py
multilingual-summarizer/src/core/: __init__.py
multilingual-summarizer/src/utils/: __init__.py  helpers.py
multilingual-summarizer/tests/: test_summarizer.py
scripts/: setup_environment.sh
src/: __init__.py  cli.py  main.py
src/core/: __init__.py  language_detector.py  summarizer.py  text_processor.py
src/utils/: __init__.py  config.py  file_handler.py  helpers.py  logger.py
tests/: test_file_handler.py  test_summarizer.py
