[metadata]
name = multilingual-summarizer
version = 1.0.0
author = Zyler150943
author_email = 
description = Multilingual Learning Material Summarizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zyler150943/The_Final_Task
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Text Processing :: Linguistic

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires =
    transformers>=4.30.0
    torch>=2.0.0
    nltk>=3.8.0
    langdetect>=1.0.9
    pandas>=1.5.0
    tqdm>=4.65.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0